--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@
   color: #61dafb;
 }
 
+.color:hover{
+  color: #fbe298;
+}
+
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
